--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "voiceChannelLog",
+    "name": "voiceChannelChatLog",
     "version":  "1.0.0",
     "description": "Logs voice channel joins and leaves to the associated text channel",
     "main":  "index.tsx",
@@ -10,7 +10,7 @@
     "license":  "GPL-3.0-or-later",
     "repository": {
         "type": "git",
-        "url": "https://github.com/bluscream-vencord-plugins/voiceChannelLog.git"
+        "url": "https://github.com/bluscream-vencord-plugins/voiceChannelChatLog.git"
     },
     "vencord":  {
                     "plugin":  true,
